richardktran-blog/deployment/environment-dev/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "api-gateway"
  name: "api-gateway"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "api-gateway"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "api-gateway"
    spec:
      containers:
        # Get image from richardktran/api-gateway:devevelopment:{version}
        - image: __image__
          imagePullPolicy: "Always"
          name: "api-gateway"
          ports:
            - containerPort: 80
              protocol: TCP
          terminationMessagePath: /dev/termination-log # this is when the container is terminated, it will write the log to this path
          terminationMessagePolicy: File
      restartPolicy: Always
