richardktran-blog/deployment/environment-dev/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "api-gateway"
  name: "api-gateway"
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: "api-gateway"
  type: ClusterIP
