richardktran-blog/deployment/environment-dev/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: api-gateway-ingress
spec:
  #ingressClassName: nginx
  rules:
  - host: gateway.richardktran.local
    http:
      paths:
      - backend:
          service:
            name: api-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
